<resources>
    <string name="app_name">SpaceTravel</string>
    <string name="start_game">Start game</string>
    <string name="parameters">Parameters</string>

    <string name="menu">Menu</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>

    <string name="control">Control</string>
    <string name="control1">Touch</string>
    <string name="control2">Slant</string>
    <string name="language">Language</string>
    <string name="language1" translatable="false">Русский</string>
    <string name="language2" translatable="false">English</string>

    <string name="survival">Survival</string>

    <string name="time">Time: </string>
    <string name="fuel">Fuel: </string>
    <string name="record">Record: </string>


</resources>